Satis ekrani ekledi. Refactor yapildi.

--- a/App.config
+++ b/App.config
@@ -5,12 +5,12 @@
             <section name="Otomasyon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="Otomasyon.OturumKaydi" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Otomasyon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <applicationSettings>
         <Otomasyon.Properties.Settings>
@@ -49,7 +49,7 @@
         <value>False</value>
       </setting>
       <setting name="ConnectionString" serializeAs="String">
-        <value>Server=LOCALHOST;Database=OtomasyonDB;Trusted_Connection=True;Connection Timeout=5</value>
+        <value>Server=LOCALHOST\SqlExpress;Database=OtomasyonDB;Trusted_Connection=True;Connection Timeout=5</value>
       </setting>
       <setting name="PaymentType" serializeAs="String">
         <value>2</value>
@@ -61,7 +61,7 @@
         <value>False</value>
       </setting>
       <setting name="LocalSqlServerName" serializeAs="String">
-        <value />
+        <value>LOCALHOST\SqlExpress</value>
       </setting>
       <setting name="IsDbCreated" serializeAs="String">
         <value>False</value>
