--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
   <package id="Microsoft.SqlServer.ConnectionInfo.dll" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Management.Sdk.Sfc.dll" version="1.0.1" targetFramework="net45" />
-  <package id="Microsoft.SqlServer.SqlManagementObjects" version="150.18208.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
 </packages>
