Code refactorig yapildi.

--- a/App.config
+++ b/App.config
@@ -1,71 +1,80 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Otomasyon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-            <section name="Otomasyon.OturumKaydi" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Otomasyon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-    <applicationSettings>
-        <Otomasyon.Properties.Settings>
-            <setting name="DbName" serializeAs="String">
-                <value>OtomasyonDB</value>
-            </setting>
-        </Otomasyon.Properties.Settings>
-        <Otomasyon.OturumKaydi>
-            <setting name="KullaniciAdi" serializeAs="String">
-                <value />
-            </setting>
-        </Otomasyon.OturumKaydi>
-    </applicationSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.SqlServer.Management.Sdk.Sfc" publicKeyToken="89845dcd8080cc91" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.SqlServer.ConnectionInfo" publicKeyToken="89845dcd8080cc91" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.SqlServer.SqlClrProvider" publicKeyToken="89845dcd8080cc91" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-15.100.0.0" newVersion="15.100.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <userSettings>
-    <Otomasyon.Properties.Settings>
-      <setting name="PasswordRequired" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="PrintEveryBills" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="ConnectionString" serializeAs="String">
-        <value>Server=LOCALHOST\SqlExpress;Database=OtomasyonDB;Trusted_Connection=True;Connection Timeout=5</value>
-      </setting>
-      <setting name="PaymentType" serializeAs="String">
-        <value>2</value>
-      </setting>
-      <setting name="SqlConnectionTimeOut" serializeAs="String">
-        <value>5</value>
-      </setting>
-      <setting name="IsClient" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="LocalSqlServerName" serializeAs="String">
-        <value>LOCALHOST\SqlExpress</value>
-      </setting>
-      <setting name="IsDbCreated" serializeAs="String">
-        <value>False</value>
-      </setting>
-    </Otomasyon.Properties.Settings>
-  </userSettings>
+	<configSections>
+		<sectionGroup name="applicationSettings"
+		              type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Otomasyon.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         requirePermission="false" />
+			<section name="Otomasyon.OturumKaydi"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         requirePermission="false" />
+		</sectionGroup>
+		<sectionGroup name="userSettings"
+		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Otomasyon.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
+	<applicationSettings>
+		<Otomasyon.Properties.Settings>
+			<setting name="DbName" serializeAs="String">
+				<value>OtomasyonDB</value>
+			</setting>
+		</Otomasyon.Properties.Settings>
+		<Otomasyon.OturumKaydi>
+			<setting name="KullaniciAdi" serializeAs="String">
+				<value />
+			</setting>
+		</Otomasyon.OturumKaydi>
+	</applicationSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.SqlServer.Management.Sdk.Sfc" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.SqlServer.ConnectionInfo" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.SqlServer.SqlClrProvider" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-15.100.0.0" newVersion="15.100.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<userSettings>
+		<Otomasyon.Properties.Settings>
+			<setting name="PasswordRequired" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="PrintEveryBills" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="ConnectionString" serializeAs="String">
+				<value>Server=LOCALHOST\SqlExpress;Database=OtomasyonDB;Trusted_Connection=True;Connection Timeout=5</value>
+			</setting>
+			<setting name="PaymentType" serializeAs="String">
+				<value>2</value>
+			</setting>
+			<setting name="SqlConnectionTimeOut" serializeAs="String">
+				<value>5</value>
+			</setting>
+			<setting name="IsClient" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="LocalSqlServerName" serializeAs="String">
+				<value>LOCALHOST\SqlExpress</value>
+			</setting>
+			<setting name="IsDbCreated" serializeAs="String">
+				<value>False</value>
+			</setting>
+		</Otomasyon.Properties.Settings>
+	</userSettings>
 </configuration>
